k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swaggies
  labels:
    name: swaggies
    environment: production
    managed-by: kubectl
